# HDG_test_2d_umn

./: .gitignore  CMakeLists.txt  EtoF_cpp.csv  FtoE_cpp.csv  HDG CODE C.docx  README.md
build-debug/: CMakeCache.txt
build-release/: CMakeCache.txt
include/hdg/: GLDeriv.h  GLQuad.h  Msh.h  Spline.h  all.h  amr_connect.h  amr_dump.h  amr_flatten.h  amr_number.h  amr_refine.h  base_grid_metrics.h  baseflow.h  baseflow_flatplate_1d.h  bl_similarity.h  blendx.h  calc_geom_iso_tfi.h  calc_grads_strong.h  calcgeom_struct.h  comp_space_metrics.h  debug_print.h  dg_mat2_Roe.h  dg_solve.h  elliptic_result.h  fd_coeffs_uniform.h  flux_lin_euler.h  flux_lin_visc.h  flux_lin_viscous_face.h  flux_split.h  generate_tfi.h  get_tau_visc.h  interp1.h  io_utils.h  jacobiP.h  jacobiZerosGW.h  legendreP.h  mesh_test_grad.h  mesh_utils.h  meshgrid.h  msh_amr_curv.h  msh_connect.h  (+18 more)
include/parameters/: M5p8_2Re_Params.h  M5p8_Params.h  MalikSpallParams.h  params_struct.h
scripts/: plot_Spline.py  plot_amr.py  plot_bU.py  plot_bU_f.py  plot_comp_tfi_grid.py  plot_elliptic_full_orthogonal.py  plot_elliptic_orthogonal.py  plot_elliptic_solve.py  plot_elliptic_steger_sorenson.py  plot_grads.py  plot_grid.py  plot_grid_tfi.py  plot_metrics_test.py
src/: GLDeriv.cpp  GLQuad.cpp  Spline.cpp  amr_connect.cpp  amr_dump.cpp  amr_flatten.cpp  amr_number.cpp  amr_refine.cpp  base_grid_metrics.cpp  baseflow_flatplate_1d.cpp  bl_similarity.cpp  calc_geom_iso_tfi.cpp  calc_grads_strong.cpp  comp_space_metrics.cpp  cylinder_driver.cpp  debug_print.cpp  dg_mat2_Roe.cpp  dg_solve.cpp  driver.cpp  fd_coeffs_uniform.cpp  flux_lin_euler.cpp  flux_lin_viscous.cpp  flux_lin_viscous_face.cpp  flux_split.cpp  generate_tfi.cpp  get_tau_visc.cpp  interp1.cpp  jacobiP.cpp  jacobiZerosGW.cpp  legendreP.cpp  meshgrid.cpp  msh_amr_curv.cpp  msh_connect.cpp  msh_test_grad.cpp  multidof_ops.cpp  ndgrid.cpp  plot_comp_tfi_grid.cpp  read_cone_dat_file.cpp  save_grid_diagnostics.cpp  save_outputs_h5.cpp  (+10 more)
tests/: test_GLDeriv.cpp  test_GLQuad.cpp  test_Spline.cpp  test_baseflow_flatplate_1d.cpp  test_bl_similarity.cpp  test_comp_space_metrics.cpp  test_fd_coeffs_uniform.cpp  test_generate_tfi.cpp  test_h5.cpp  test_jacobiP.cpp  test_jacobiZeros.cpp  test_legendreP.cpp  test_meshgrid.cpp  test_ndgrid.cpp  test_read_cone_date_file.cpp  test_sd.cpp  test_sem1.cpp  test_sem2.cpp  test_tfi_elliptic_full_orthogonal.cpp  test_tfi_elliptic_orthogonal.cpp  test_tfi_elliptic_solve.cpp  test_tfi_elliptic_steger_sorenson.cpp  test_vec.cpp
